# swagger-test-generator

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.toml  run-dev.rs
.github/workflows/: ci.yml
examples/sample_api/: Cargo.toml
examples/sample_api/src/: main.rs
src/: cli.rs  generator.rs  lib.rs  main.rs  parser.rs  utils.rs
src/cli/: args.rs
src/generator/: api_endpoints.rs  swagger_doc.rs  test_framework.rs
src/parser/: swagger.rs
src/utils/: helpers.rs
tests/: integration_tests.rs
tests/samples/: sample_swagger.json
