[package]
name = "swagger-test-generator"
version = "0.1.0"
edition = "2021"
description = "A tool to generate test cases from Swagger/OpenAPI specifications."
license = "MIT"
repository = "https://github.com/jhaage/swagger-test-generator"
homepage = "https://github.com/jhaage/swagger-test-generator"
documentation = "https://docs.rs/swagger-test-generator"
keywords = ["swagger", "openapi", "test", "generator"]
categories = ["development-tools", "testing"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.6.18"
tower = "0.4"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
openapi = { version = "0.2", package = "openapiv3" }
swagger = "0.2"
tower-http = { version = "0.4", features = ["cors"] }
once_cell = "1.17"
pathdiff = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
assert_cmd = "2.0"
predicates = "1.0"
cargo-release = "0.25.18"

# Custom targets for development workflows
[[bin]]
name = "run-dev"
path = "run-dev.rs"

[badges]
actions = { status = "true" }
